# agentic_rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  mappers.py  pyproject.toml
.githooks/: commit-msg  prepare-commit-msg
.github/workflows/: ci.yml
agent/: AGENTS.md  edges.py  graph.py  graph_state.py  nodes.py  orchestrator_agent.py  prompts.py  research_search_agent.py  schemas.py  states.py  tools.py
core/: __init__.py  config.py  corpus_profile.py  factory.py  persistence.py  rag_answer.py  settings.py
indexing/: AGENTS.md  bm25_index.py  chunker.py  data_processor.py  embeddings.py  indexer.py  mappers.py  retrieval_pipeline.py  retriever.py  token_count.py  vectorstore.py
indexing/builders/: __init__.py  hierarchical_index_builder.py
indexing/models/: __init__.py  doc_tree.py  node.py
indexing/parsers/: __init__.py  base.py  common.py  markdown_parser.py  pdf_parser.py  txt_parser.py
indexing/stores/: __init__.py  lexical_store.py  node_store.py  sqlite_node_store.py  sqlite_vec_store.py  vector_store.py
llm/: __init__.py
llms/: __init__.py  llm.py
tests/: __init__.py  conftest.py  test_agent_grounded_answer.py  test_agent_planning.py  test_bm25.py  test_chunker.py  test_corpus_profile.py  test_data_processor.py  test_graph_state.py  test_hierarchical_indexing.py  test_mappers.py  test_nodes.py  test_persistence.py  test_rag_answer.py  test_retriever.py  test_schemas.py  test_settings.py  test_storage_layer.py
ui/: gradio.py
