[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "nltk>=3.9.3",
    "pymupdf>=1.27.1",
    "pymupdf-layout>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.12.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
